--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
 						<div class="inner-container d-flex align-items-center justify-content-between">
 							<div class="logo-box">
 								<div class="logo">
-									<a href="#" title="Andamios Dominicanos"><img src="/assets/images/Logo_Andamios-Dominicanos.png" alt="logo" style="" /></a>
+									<a href="#" title="Andamios Dominicanos"><img src="assets/images/Logo_Andamios-Dominicanos.png" alt="logo" style="" /></a>
 								</div>
 							</div>
 <div class="right-column d-flex align-items-center">
 	<div class="nav-outer">
-		<div class="mobile-nav-toggler"> <img src="/assets/images/icons/menu.svg" alt="Awesome Image" /> </div>
+		<div class="mobile-nav-toggler"> <img src="assets/images/icons/menu.svg" alt="Awesome Image" /> </div>
 		<nav class="main-menu navbar-expand-md navbar-light">
 			<div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
 				<ul class="navigation">
@@ -322,7 +322,7 @@
                 </button>
                 <div class="sidemenu-nav-toggler mr_30">
                   <img
-                    src="/assets/images/icons/menu.svg"
+                    src="assets/images/icons/menu.svg"
                     alt="Awesome Image"
                   />
                 </div>
@@ -342,17 +342,17 @@
 			<div class="inner-container d-flex align-items-center justify-content-between">
 				<div class="logo-box">
 					<div class="logo">
-						<a href="#" title="Andamios Dominicanos"><img src="/assets/images/Logo_Andamios-Dominicanos.png" alt="logo" style="" /></a>
+						<a href="#" title="Andamios Dominicanos"><img src="assets/images/Logo_Andamios-Dominicanos.png" alt="logo" style="" /></a>
 					</div>
 				</div>
 				<div class="right-column d-flex align-items-center">
 					<div class="nav-outer">
-						<div class="mobile-nav-toggler"> <img src="/assets/images/icons/menu.svg" alt="Awesome Image" /> </div>
+						<div class="mobile-nav-toggler"> <img src="assets/images/icons/menu.svg" alt="Awesome Image" /> </div>
 						<nav class="main-menu navbar-expand-md navbar-light"></nav>
 					</div> <button type="button" class="theme-btn search-toggler ml_30 mr_10">
                     <i class="flaticon-magnifiying-glass"></i>
                   </button>
-					<div class="sidemenu-nav-toggler mr_30"> <img src="/assets/images/icons/menu.svg" alt="Awesome Image" /> </div>
+					<div class="sidemenu-nav-toggler mr_30"> <img src="assets/images/icons/menu.svg" alt="Awesome Image" /> </div>
 					<div class="header-link-btn"> <a href="#/contact/" class="btn-1 pt_10 pb_10 pl_30 pr_30 b_radius_23 ff_sec fw_bold tt_u fs_14 ls_1">get appointment <span></span
                     ></a> </div>
 				</div>
@@ -396,7 +396,7 @@
 	<div class="wrapper-box">
 		<div class="hidden-sidebar-close"> <span class="fal fa-times"></span> </div>
 		<div class="logo">
-			<a href="#" title="Andamios Dominicanos"><img src="/assets/images/Logo_Andamios-Dominicanos-Slogan.png" alt="logo" style="" /></a>
+			<a href="#" title="Andamios Dominicanos"><img src="assets/images/Logo_Andamios-Dominicanos-Slogan.png" alt="logo" style="" /></a>
 		</div>
 		<div class="content">
 			<div class="about-widget-two sidebar-widget">
@@ -412,7 +412,7 @@
 				<ul>
 					<li>
 						<div class="inner">
-							<div class="icon"> <img src="/assets/images/icons/icon-7__mapmarker.png" alt="Awesome Image" /> </div>
+							<div class="icon"> <img src="assets/images/icons/icon-7__mapmarker.png" alt="Awesome Image" /> </div>
 							<div class="text">
 								<p> 54B, Tailstoi Town 5238 MT,<br /> La city, IA 522364 </p>
 							</div>
@@ -420,7 +420,7 @@
 					</li>
 					<li>
 						<div class="inner">
-							<div class="icon"> <img src="/assets/images/icons/icon-8__envelop.png" alt="Awesome Image" /> </div>
+							<div class="icon"> <img src="assets/images/icons/icon-8__envelop.png" alt="Awesome Image" /> </div>
 							<div class="text">
 								<p> <a href="mailto:info@example.com">info@example.com</a> </p>
 							</div>
@@ -428,7 +428,7 @@
 					</li>
 					<li>
 						<div class="inner">
-							<div class="icon"> <img src="/assets/images/icons/icon-9__phone.png" alt="Awesome Image" /> </div>
+							<div class="icon"> <img src="assets/images/icons/icon-9__phone.png" alt="Awesome Image" /> </div>
 							<div class="text">
 								<p><a href="tel:+1800-456-7890">+1800-456-7890</a></p>
 							</div>
@@ -436,7 +436,7 @@
 					</li>
 					<li>
 						<div class="inner">
-							<div class="icon"> <img src="/assets/images/icons/icon-10__clock.png" alt="Awesome Image" /> </div>
+							<div class="icon"> <img src="assets/images/icons/icon-10__clock.png" alt="Awesome Image" /> </div>
 							<div class="text">
 								<p>Working Hrs : 9.30am to 6.30pm</p>
 							</div>
@@ -573,7 +573,7 @@
                               <div class="banner-1-image-1 p_absolute b_0 r_0">
                                 <img
                                   decoding="async"
-                                  src="/assets/images/Elemento-2-Home-1903x915.png"
+                                  src="assets/images/Elemento-2-Home-1903x915.png"
                                   alt="Awesome Image"
                                 />
                               </div>
@@ -583,7 +583,7 @@
                               >
                                 <img
                                   decoding="async"
-                                  src="/assets/images/Elemento-Home-1903x915.png"
+                                  src="assets/images/Elemento-Home-1903x915.png"
                                   alt="Awesome Image"
                                 />
                               </div>
@@ -2683,7 +2683,7 @@
                 >
                   <img
                     class="mr_20 mt_10"
-                    src="/assets/images/icons/icon-map.png"
+                    src="assets/images/icons/icon-map.png"
                     alt="Awesome Image"
                   />
                   <p class="c_light mb_0 lh_30">
@@ -2698,7 +2698,7 @@
                 >
                   <img
                     class="mr_20 mt_10"
-                    src="/assets/images/icons/icon-mail.png"
+                    src="assets/images/icons/icon-mail.png"
                     alt="Awesome Image"
                   />
                   <p class="c_light mb_0 lh_30">
@@ -2715,7 +2715,7 @@
                 >
                   <img
                     class="mr_20 mt_10"
-                    src="/assets/images/icons/icon-phone.png"
+                    src="assets/images/icons/icon-phone.png"
                     alt="Awesome Image"
                   />
                   <p class="c_light mb_0 fs_20 lh_30">
@@ -2741,7 +2741,7 @@
                   <div class="about-widget">
                     <div class="logo mb_30">
                       <img
-                        src="/assets/images/Logo_Andamios-Dominicanos.png"
+                        src="assets/images/Logo_Andamios-Dominicanos.png"
                         alt="Awesome Image"
                       />
                     </div>
@@ -3051,67 +3051,67 @@
     ></script>
     <script
       type="text/javascript"
-      src="/assets/js/bootstrap.min.js"
+      src="assets/js/bootstrap.min.js"
       id="bootstrap-js"
     ></script>
     <script
       type="text/javascript"
-      src="/assets/js/jquery.nice-select.min.js"
+      src="assets/js/jquery.nice-select.min.js"
       id="jquery-nice-select-js"
     ></script>
     <script
       type="text/javascript"
-      src="/assets/js/jquery.fancybox.js"
+      src="assets/js/jquery.fancybox.js"
       id="jquery-fancybox-js"
     ></script>
     <script
       type="text/javascript"
-      src="/assets/js/isotope.js"
+      src="assets/js/isotope.js"
       id="isotope-js"
     ></script>
     <script
       type="text/javascript"
-      src="/assets/js/appear.js"
+      src="assets/js/appear.js"
       id="appear-js"
     ></script>
     <script
       type="text/javascript"
-      src="/assets/js/wow.js"
+      src="assets/js/wow.js"
       id="wow-js"
     ></script>
     <script
       type="text/javascript"
-      src="/assets/js/TweenMax.min.js"
+      src="assets/js/TweenMax.min.js"
       id="TweenMax-js"
     ></script>
     <script
       type="text/javascript"
-      src="/assets/js/swiper.min.js"
+      src="assets/js/swiper.min.js"
       id="swiper-js"
     ></script>
     <script
       type="text/javascript"
-      src="/assets/js/jquery.ajaxchimp.min.js"
+      src="assets/js/jquery.ajaxchimp.min.js"
       id="jquery-ajaxchimp-js"
     ></script>
     <script
       type="text/javascript"
-      src="/assets/js/parallax-scroll.js"
+      src="assets/js/parallax-scroll.js"
       id="parallax-scroll-js"
     ></script>
     <script
       type="text/javascript"
-      src="/assets/js/jquery-ui-1.9.2.custom.min.js"
+      src="assets/js/jquery-ui-1.9.2.custom.min.js"
       id="jquery-ui-js"
     ></script>
     <script
       type="text/javascript"
-      src="/assets/js/odometer.min.js"
+      src="assets/js/odometer.min.js"
       id="odometer-js"
     ></script>
     <script
       type="text/javascript"
-      src="/assets/js/script.js"
+      src="assets/js/script.js"
       id="buildnox-main-script-js"
     ></script>
     <script
