--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
                               >
                                 <div class="swiper-wrapper">
                                   <!-- Slide Item -->
-                                  <div class="swiper-slide">
+                                  <div class="swiper-slide" style="width: 370px; margin-right: 30px;">
                                     <div class="service-1-block">
                                       <div class="service-1-shape"></div>
                                       <div class="service-1-icon">
